Fixes bottom spacing in dashboard cell style.

--- a/tool-ui/src/main/webapp/style/tool.less
+++ b/tool-ui/src/main/webapp/style/tool.less
@@ -421,16 +421,8 @@
 }
 
 .dashboardCell {
-    padding: 5px;
+    padding: 0 5px;
     position: relative;
-
-    &:first-child {
-        padding-top: 0;
-    }
-
-    &:last-child {
-        padding-bottom: 0;
-    }
 
     .dashboardColumn:first-child & {
         padding-left: 0;
